# nbody

./: .gitignore  CMakeLists.txt  Makefile  getini.cpp  getini.h  getiniExp.h  main.cpp  nbodyExp.cpp  notes  orbit.sh  parameters.json  parameters2.json  parametersSolar.json  simout.cpp  simout.h  test.json  videogen.c  videogen.cpp  videogen.h
