cmake_minimum_required(VERSION 2.8)
project(nbody)
find_package( OpenCV REQUIRED )
find_package( jsoncpp REQUIRED )
get_target_property(JSON_INC_PATH jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)
include_directories( ${OpenCV_INCLUDE_DIRS} ${JSON_INC_PATH})
add_library(getini getini.cpp)
add_library(simout simout.cpp)
add_executable( ${PROJECT_NAME} main.cpp )
target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})
target_link_libraries(${PROJECT_NAME} PUBLIC jsoncpp_lib)
target_link_libraries(${PROJECT_NAME} PUBLIC getini)
target_link_libraries(simout PUBLIC ${OpenCV_LIBS})
target_link_libraries(${PROJECT_NAME} PUBLIC simout)
message(STATUS "Opencv libs ${OpenCV_LIBS}")
